--- a/blog/templates/blog/all_posts.html
+++ b/blog/templates/blog/all_posts.html
@@ -35,6 +35,26 @@
           {% endif %}
         {% endfor %}
       </div>
+      {% if is_paginated %}
+        <ul class="pagination center-align">
+          {% if page_obj.has_previous %}
+            <li class="waves-effect">
+              <a href="/blog/posts/?page={{ page_obj.previous_page_number }}"><i class="material-icons">chevron_left</i></a>
+            </li>
+          {% endif %}
+          {% for i in range %}
+            <li class="waves-effect {% if page_obj.number == forloop.counter %}active{% endif %}">
+              <a href="/blog/posts/?page={{forloop.counter}}">{{forloop.counter}}</a>
+            </li>
+          {% endfor %}
+          {% if page_obj.has_next %}
+            <li class="waves-effect">
+              <a href="/blog/posts/?page={{ page_obj.next_page_number }}"><i class="material-icons">chevron_right</i></a>
+            </li>
+          {% endif %}
+        </ul>
+      {% endif %}
+
     </div>
   </div>
 {% endblock %}
