make post preview headline smaller

--- a/blog/templates/bloginclude/blog_map.html
+++ b/blog/templates/bloginclude/blog_map.html
@@ -78,7 +78,7 @@
         '<a href="' + marker.link + '">' +
         '<h1 class="center-align">'+ marker.title +'</h1>'+
         '<img src="' + marker.imgURL + '">'+
-        '<h5 class="post-headline accent-text center-align">' + marker.headline + '</h5>'+
+        '<p class="post-headline accent-text center-align">' + marker.headline + '</p>'+
         '</a>'+
         '</div>'
 
