--- a/blog/templates/bloginclude/post_preview.html
+++ b/blog/templates/bloginclude/post_preview.html
@@ -6,7 +6,7 @@
     <img src="{{post.image.url}}">
   </a>
   <div class="post-content">
-    <h5 class="accent-text">{{post.headline}}</h5>
+    <p class="accent-text">{{post.headline}}</p>
     <a href="{{post.get_absolute_url}}" class="btn right hover-right">
       Read More <i class="material-icons right">arrow_forward</i>
     </a>
