--- a/static/scss/_variables.scss
+++ b/static/scss/_variables.scss
@@ -9,6 +9,7 @@ $secondary-color-dark: darken(#ED8C72, 15%);
 // brand colors
 $brand-light-gray: #efefef;
 $brand-medium-gray: #777;
+$brand-dark: #333;
 
 $dark-texture: url("/static/img/textures/texture_dark.png") repeat;
 $medium-texture: url("/static/img/textures/texture_medium.png") repeat;
